--- a/cadastro.html
+++ b/cadastro.html
@@ -1,46 +1,47 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-   
+
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='ENDEREÇO.CSS'>
-    <script src='main.js'></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel='stylesheet' type='text/css' media='screen' href='cadastro.css'>
 </head>
+
 <body>
- 
-   
+
+
     <form action="">
         <h1>Cadastro de Endereço</h1>
- 
-    <label for="" class="form-label">CEP</label>
-    <input class="col-12" type="text" placeholder="CEP" id="CEP">
- 
- 
-    <label for="" class="form-label">Rua</label>
-    <input class="col-12" type="text" placeholder="Rua" id="Logradouro">
- 
-    <label for="" class="form-label">Bairro</label>
-    <input class="col-12" type="text" placeholder="Bairro" id="Bairro">
- 
-    <label for="" class="form-label">Complemento</label>
-    <input class="col-12" type="text" placeholder="Complemento" id="Complemento">
- 
- 
-    <label for="" class="form-label">Cidade</label>
-    <input class="col-12" type="text" placeholder="Cidade" id="Nacionalidade">
-   
+
+        <label for="" class="form-label">CEP</label>
+        <input class="col-12" type="text" placeholder="CEP" id="cep">
+
+
+        <label for="" class="form-label">Rua</label>
+        <input class="col-12" type="text" placeholder="Rua" id="logradouro">
+
+        <label for="" class="form-label">Bairro</label>
+        <input class="col-12" type="text" placeholder="Bairro" id="bairro">
+
+        <label for="" class="form-label">Complemento</label>
+        <input class="col-12" type="text" placeholder="Complemento" id="complemento">
+
+
+        <label for="" class="form-label">Cidade</label>
+        <input class="col-12" type="text" placeholder="Cidade" id="localidade">
+
         <label for="" class="form-label">Estado</label>
-        <input class="col-12" type="text" placeholder="Estado" id="UF">
-     
-   
+        <input class="col-12" type="text" placeholder="Estado" id="estado">
+
+
         <label for="" class="form-label">Número</label>
-        <input class="col-12" type="number" placeholder="Número" id="Número">
-   
- <button class="btn btn-primary">Confirmar</button>
-</form>
+        <input class="col-12" type="text" placeholder="Número" id="numero">
+
+        <button class="btn btn-success">Confirmar</button>
+    </form>
+    <script src='cadastro.js'></script>
 </body>
+
 </html>
- 
